kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fruits-deployment
  labels:
    app: fruits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fruits
  template:
    metadata:
      labels:
        app: fruits
    spec:
      containers:
      - name: fruits
        image: fdocampo/frutal:master
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
