kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits-ingress
spec:
  rules:
  - host: fruits-fernando.com
    http:
      paths:
      - backend:
          service:
            name: fruits-service
            port:
              number: 8080
        pathType: Prefix
        path: /
